--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonXoa" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonXoa"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        />
 
     <Button
         android:id="@+id/buttonSua"
